<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="error_code_server">服务器执行错误</string>
    
    <string name="app_name">WanAndroid</string>

    <string-array name="main_tab_texts">
        <item>首页</item>
        <item>问答</item>
        <item>收藏</item>
        <item>发现</item>
        <item>我的</item>
    </string-array>

    <integer-array name="main_tab_icons">
        <item>@drawable/tab_icon_home</item>
        <item>@drawable/tab_icon_problem</item>
        <item>@drawable/tab_icon_collection</item>
        <item>@drawable/tab_icon_find</item>
        <item>@drawable/tab_icon_my</item>
    </integer-array>

    <string name="problem">问答</string>
    <string name="register">注册</string>
    <string name="register_account">注册账号</string>
    <string name="please_login">请登录</string>
    <string name="login">登录</string>
    <string name="logo_name">W a n &#160;&#160;A n d r o i d</string>
    <string name="hint_input_nickname">请输入用户名</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_repassword">请再次输入密码</string>
    <string name="hint_please_input_equal_password">请输入相同的密码</string>
    <string name="format_ranking">排名：%s</string>
    <string name="default_ranking">排名：--</string>
    <string name="my_integral">我的积分</string>
    <string name="format_integral">当前积分：%s</string>
    <string name="collect_articles">收藏文章</string>
    <string name="collect_website">收藏网站</string>
    <string name="share_articles">分享文章</string>
    <string name="about_me">关于我</string>
    <string name="set_up">设置</string>
</resources>