<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="view_model"
            type="com.aibfive.wanandroid.ui.my.MyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/clContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorF5F5F5"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <View
            android:id="@+id/bgView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200"
            android:background="@color/color3489FF"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/userIv"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:src="@drawable/icon_user_avatar"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/bgView"
            app:layout_constraintBottom_toBottomOf="@id/bgView"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/userTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/please_login"
            android:textColor="@color/colorFFFFFF"
            android:textSize="@dimen/sp_14"
            android:layout_marginHorizontal="@dimen/dp_20"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/userIv"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/userIv"
            app:layout_constraintBottom_toTopOf="@id/rankingTv"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rankingTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_ranking"
            android:textColor="@color/colorFFFFFF"
            android:textSize="@dimen/sp_12"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_13"
            app:layout_constraintLeft_toRightOf="@id/userIv"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userTv"
            app:layout_constraintBottom_toBottomOf="@id/userIv"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/integralTagTv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_48"
            android:text="@string/my_integral"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color333333"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_15"
            android:drawablePadding="@dimen/dp_10"
            android:drawableLeft="@drawable/jifen_ico"
            android:background="@color/colorFFFFFF"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@id/bgView"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/integralTv"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_48"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color3489FF"
            android:gravity="right|center_vertical"
            android:paddingHorizontal="@dimen/dp_15"
            android:drawablePadding="@dimen/dp_10"
            android:drawableRight="@drawable/next_arrow"
            android:background="@color/colorFFFFFF"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@id/bgView"
            app:layout_constraintLeft_toRightOf="@id/integralTagTv"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/collectArticlesTv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:text="@string/collect_articles"
            android:textColor="@color/color333333"
            android:textSize="@dimen/sp_14"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/dp_10"
            android:drawableLeft="@drawable/sc_red_sroke_ico"
            android:drawableRight="@drawable/next_arrow"
            android:background="@drawable/divider_0_6dp_ebebebcolor_bottom_50dp_paddingleft"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingHorizontal="@dimen/dp_15"
            app:layout_constraintTop_toBottomOf="@id/integralTagTv"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/collectWebsiteTv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:text="@string/collect_website"
            android:textColor="@color/color333333"
            android:textSize="@dimen/sp_14"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/dp_10"
            android:drawableLeft="@drawable/wangzhan_ico"
            android:drawableRight="@drawable/next_arrow"
            android:background="@drawable/divider_0_6dp_ebebebcolor_bottom_50dp_paddingleft"
            android:paddingHorizontal="@dimen/dp_15"
            app:layout_constraintTop_toBottomOf="@id/collectArticlesTv"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/shareArticlesTv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:text="@string/share_articles"
            android:textColor="@color/color333333"
            android:textSize="@dimen/sp_14"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/dp_10"
            android:drawableLeft="@drawable/wenzhang_ico"
            android:drawableRight="@drawable/next_arrow"
            android:background="@color/colorFFFFFF"
            android:paddingHorizontal="@dimen/dp_15"
            app:layout_constraintTop_toBottomOf="@id/collectWebsiteTv"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aboutMeTv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:text="@string/about_me"
            android:textColor="@color/color333333"
            android:textSize="@dimen/sp_14"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/dp_10"
            android:drawableLeft="@drawable/xiaolianchenggong_ico"
            android:drawableRight="@drawable/next_arrow"
            android:background="@color/colorFFFFFF"
            android:paddingHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@id/shareArticlesTv"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/setUpTv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:text="@string/set_up"
            android:textColor="@color/color333333"
            android:textSize="@dimen/sp_14"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/dp_10"
            android:drawableLeft="@drawable/shezhi_ico"
            android:drawableRight="@drawable/next_arrow"
            android:background="@color/colorFFFFFF"
            android:paddingHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@id/aboutMeTv"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
